--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
     />
-    <title>Synergist test</title>
+    <title>google-maps-search-app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
